@@ -1,6 +1,5 @@
 package de.kifo.commands;
 
-import com.google.common.collect.ImmutableList;
 import com.google.inject.Inject;
 import de.kifo.JavaBot;
 import de.kifo.commands.handle.CommandBase;
@@ -17,9 +16,8 @@ import org.jetbrains.annotations.NotNull;
 import java.util.List;
 import java.util.regex.Pattern;
 
+import static de.kifo.JavaBot.messageService;
 import static de.kifo.common.enums.exception.ExceptionType.PASSWORD_NOT_SECURE;
-import static de.kifo.common.enums.message.Message.MessageType.MESSAGE;
-import static de.kifo.common.util.EmbedUtils.getEmbedMessageByText;
 import static java.util.regex.Pattern.compile;
 import static net.dv8tion.jda.api.interactions.commands.OptionType.STRING;
 
@@ -41,10 +39,6 @@ public class RegisterCommand extends CommandBase {
         long userId = member.getIdLong();
         User user = javaBot.getApi().getUserById(userId);
 
-        /*if (javaBot.getApi().isUserRegistered(user)) {
-            throw new CommandException(USER_ALREADY_REGISTERED, event);
-        }*/
-
         String password = options.get(0).getAsString();
         if (!isValidPassword(password)) {
             throw new CommandException(PASSWORD_NOT_SECURE, event);
@@ -52,9 +46,8 @@ public class RegisterCommand extends CommandBase {
         user.setPassword(password);
         javaBot.getApi().updateUser(user);
 
-        event.replyEmbeds(
-                getEmbedMessageByText("Dein Account wurde erfolgreich registriert.", MESSAGE)).
-                setEphemeral(true)
+        event.replyEmbeds(messageService.message("Dein Account wurde erfolgreich registriert."))
+                .setEphemeral(true)
                 .queue();
     }
 
@@ -63,7 +56,7 @@ public class RegisterCommand extends CommandBase {
 
     @Override
     public List<OptionData> getOptions() {
-        return ImmutableList.of(new OptionData(STRING, "passwort", "Wähle ein Passwort für deinen Account.", true, false));
+        return List.of(new OptionData(STRING, "passwort", "Wähle ein Passwort für deinen Account.", true, false));
     }
 
     private boolean isValidPassword(@NotNull String password) {
