@@ -1,6 +1,5 @@
 package de.kifo.commands.music;
 
-import com.google.common.collect.ImmutableList;
 import com.google.inject.Inject;
 import de.kifo.JavaBot;
 import de.kifo.commands.handle.CommandBase;
@@ -9,6 +8,7 @@ import de.kifo.common.api.model.Song;
 import de.kifo.common.exceptions.CommandException;
 import de.kifo.common.music.PlayerManager;
 import de.kifo.common.music.TrackScheduler;
+import de.kifo.common.services.MessageService;
 import net.dv8tion.jda.api.entities.Guild;
 import net.dv8tion.jda.api.entities.GuildVoiceState;
 import net.dv8tion.jda.api.entities.Member;
@@ -25,14 +25,12 @@ import org.jetbrains.annotations.NotNull;
 import java.util.HashMap;
 import java.util.List;
 
+import static de.kifo.JavaBot.messageService;
 import static de.kifo.common.api.model.HistoryEntry.Type.SONG_PLAY;
 import static de.kifo.common.enums.exception.ExceptionType.BOT_ALREADY_PLAYING_FOR_GUILD;
 import static de.kifo.common.enums.exception.ExceptionType.NOT_IN_SPEECH_CHANNEL;
-import static de.kifo.common.enums.message.Message.MessageType.MESSAGE;
-import static de.kifo.common.util.EmbedUtils.getEmbedMessageByText;
 import static java.lang.System.currentTimeMillis;
 import static java.util.Objects.isNull;
-import static java.util.Objects.requireNonNull;
 import static net.dv8tion.jda.api.interactions.commands.OptionType.STRING;
 
 @CommandBase.BotCommand(name = "play", description = "Wähle ein Lied, das abgespielt werden soll.", hasOptions = true)
@@ -67,17 +65,28 @@ public class PlayCommand extends CommandBase {
 
         manager.openAudioConnection(voiceChannel);
 
-        String url = options.get(0).getAsString();
-        if (!url.startsWith("http")) {
-            url = "ytsearch:" + url + " audio";
+        String[] url = {options.get(0).getAsString()};
+        if (!url[0].startsWith("http")) {
+            url[0] = "ytsearch:" + url[0] + " audio";
         }
-        event.replyEmbeds(getEmbedMessageByText("Suche nach dem Titel...", MESSAGE)).queue();
 
-        playerManager.play(event.getGuild(), url, member.getUser().getIdLong());
+        event.deferReply().queue();
+
+        MessageService.UpdatableMessage updatableMessage = new MessageService.UpdatableMessage(
+                event.getHook().sendMessageEmbeds(messageService.info("Suche nach dem Titel...")).complete()
+        );
+
+        playerManager.play(guild, url[0], event.getUser().getIdLong())
+                .thenCompose(updatableMessage::update)
+                .exceptionally(e -> {
+                    updatableMessage.fail();
+                    return null;
+                });
+
         map.put(voiceChannel.getGuild().getIdLong(), textChannel);
 
         javaBot.getApi().createHistoryEntry(new HistoryEntry(null, guild.getIdLong(), member.getIdLong(),
-                SONG_PLAY, currentTimeMillis(),"Query " + url + ", " + textChannel.getName()));
+                SONG_PLAY, currentTimeMillis(),"Query " + url[0] + ", " + textChannel.getName()));
     }
 
     @Override
@@ -95,6 +104,6 @@ public class PlayCommand extends CommandBase {
 
     @Override
     public List<OptionData> getOptions() {
-        return ImmutableList.of(new OptionData(STRING, "song", "Titel oder URL vom Lied", true, true));
+        return List.of(new OptionData(STRING, "song", "Titel oder URL vom Lied", true, true));
     }
 }
